[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/images/blue_button_flat_up.png" type="Texture" id=1]
[ext_resource path="res://ui/images/blue_button_flat_down.png" type="Texture" id=2]
[ext_resource path="res://ui/fonts/kenvector_future.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://ui/MainMenu.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 28
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 512.0 ]
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -131.0
margin_top = -114.5
margin_right = 131.0
margin_bottom = 114.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 262.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 1 )
text = "Battle Arena"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 262.0
margin_bottom = 71.0
rect_min_size = Vector2( 0, 35 )

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 75.0
margin_right = 262.0
margin_bottom = 124.0

[node name="ClientButton" type="TextureButton" parent="VBoxContainer/CenterContainer"]
margin_left = 36.0
margin_right = 226.0
margin_bottom = 49.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )

[node name="Label2" type="Label" parent="VBoxContainer/CenterContainer/ClientButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Join Game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
margin_top = 128.0
margin_right = 262.0
margin_bottom = 138.0
rect_min_size = Vector2( 0, 10 )

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer"]
margin_top = 142.0
margin_right = 262.0
margin_bottom = 191.0

[node name="ServerButton" type="TextureButton" parent="VBoxContainer/CenterContainer2"]
margin_left = 36.0
margin_right = 226.0
margin_bottom = 49.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )

[node name="Label2" type="Label" parent="VBoxContainer/CenterContainer2/ServerButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Create Game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
margin_top = 195.0
margin_right = 262.0
margin_bottom = 205.0
rect_min_size = Vector2( 0, 10 )

[node name="CenterContainer4" type="CenterContainer" parent="VBoxContainer"]
margin_top = 209.0
margin_right = 262.0
margin_bottom = 229.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/CenterContainer4"]
margin_left = 47.0
margin_right = 214.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer4/HBoxContainer"]
margin_top = 3.0
margin_right = 13.0
margin_bottom = 17.0
text = "IP"

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/CenterContainer4/HBoxContainer"]
margin_left = 17.0
margin_right = 167.0
margin_bottom = 20.0
rect_min_size = Vector2( 150, 20 )
text = "127.0.0.1"

[connection signal="button_up" from="VBoxContainer/CenterContainer/ClientButton" to="." method="_on_ClientButton_button_up"]
[connection signal="button_up" from="VBoxContainer/CenterContainer2/ServerButton" to="." method="_on_ServerButton_button_up"]
